--- a/style/_main.scss
+++ b/style/_main.scss
@@ -80,9 +80,8 @@ section {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-top: 20px;
     gap: 20px;
-    margin: auto;
+    margin: 20px auto;
     height: 150px;
     width: 60%;
     background-color:#2e2e2e;
