--- a/style/style.css
+++ b/style/style.css
@@ -19,6 +19,18 @@ body {
   min-height: 100vh;
 }
 
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #2e2e2e;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #121212;
+}
+
 header {
   height: 150px;
   background-color: #121212;
@@ -128,9 +140,8 @@ section .projects {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding-top: 20px;
   gap: 20px;
-  margin: auto;
+  margin: 20px auto;
   height: 150px;
   width: 60%;
   background-color: #2e2e2e;
