--- a/style/style.scss
+++ b/style/style.scss
@@ -12,6 +12,18 @@ body {
   min-height: 100vh;
 }
 
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #2e2e2e;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #121212;
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Marcellus&display=swap');
 
 @import './header';
