--- a/style/_main.scss
+++ b/style/_main.scss
@@ -27,7 +27,7 @@ section {
     width: 60%;
 
     h1 {
-      color: white;
+      color: rgb(211, 211, 211);
       font-size: 25px;
       font-family: 'Marcellus', serif;
       letter-spacing: 1px;
@@ -42,7 +42,7 @@ section {
 
     button {
       font-size: 25px;
-      color: white;
+      color: rgb(211, 211, 211);
       padding: 7px 15px;
       background-color: rgb(160, 85, 211);
       border: none;
@@ -57,7 +57,7 @@ section {
     }
 
     p {
-      color: white;
+      color: rgb(211, 211, 211);
       align-items: center;
       font-family: 'Marcellus', serif;
       letter-spacing: 1px;
@@ -74,21 +74,41 @@ section {
     background-color: rgb(141, 141, 141);
     // border: 1px solid white;
   }
+}
 
   // styling for each added project
   .projects {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    gap: 20px;
+    justify-content: flex-start;
     margin: 20px auto;
-    height: 150px;
+    height: auto;
     width: 60%;
     background-color:#2e2e2e;
     border-radius: 5px;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     margin-bottom: 20px;
+
+    h1 {
+      color: rgb(211, 211, 211);
+      font-size: 25px;
+      font-family: 'Marcellus', serif;
+      letter-spacing: 1px;
+      padding: 15px;
+    }
+
+    div {
+      background-color: #353535;
+      padding: 20px;
+      margin: 10px;
+    }
+
+    li {
+      color: rgb(211, 211, 211);
+      font-family: 'Marcellus', serif;
+      letter-spacing: 1px;
+      list-style: none;
+    }
   }
-}
 
 
