--- a/style/style.css
+++ b/style/style.css
@@ -170,4 +170,52 @@ section .add-new-header::after {
   letter-spacing: 1px;
   list-style: none;
 }
+
+.modal {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+}
+
+.modal .form-container {
+  height: 440px;
+  width: 440px;
+  background-color: #2e2e2e;
+  border-radius: 5px;
+}
+
+.modal .form-container form {
+  background-color: #414141;
+  display: block;
+  height: 90%;
+  width: 90%;
+  margin: 5% auto;
+}
+
+.modal .form-container label {
+  float: left;
+  color: lightgray;
+  font-family: 'Marcellus', serif;
+  letter-spacing: 1px;
+}
+
+.modal .form-container input {
+  float: left;
+}
+
+.modal .form-container button {
+  float: left;
+}
 /*# sourceMappingURL=style.css.map */
