--- a/style/_javascript.scss
+++ b/style/_javascript.scss
@@ -69,6 +69,7 @@
       padding: 0 30px 30px;
     }
 
+
     label {
       color: rgb(211, 211, 211);
       font-family: 'Marcellus', serif;
@@ -110,3 +111,28 @@
 .visibility {
   display: none;
 }
+
+.task-container {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+
+  button {
+    border-radius: 5px;
+  }
+}
+
+.task-list {
+  color: rgb(211, 211, 211);
+  font-family: 'Marcellus', serif;
+  letter-spacing: 1px;
+  list-style: none;
+  margin-left: 10px;
+  cursor: pointer;
+}
+
+.checkbox {
+  width: 300px;
+  padding: 5px;
+}
+
