--- a/style/style.css
+++ b/style/style.css
@@ -259,4 +259,32 @@ section .add-new-header::after {
 .visibility {
   display: none;
 }
+
+.task-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.task-container button {
+  border-radius: 5px;
+}
+
+.task-list {
+  color: lightgray;
+  font-family: 'Marcellus', serif;
+  letter-spacing: 1px;
+  list-style: none;
+  margin-left: 10px;
+  cursor: pointer;
+}
+
+.checkbox {
+  width: 300px;
+  padding: 5px;
+}
 /*# sourceMappingURL=style.css.map */
