--- a/style/style.css
+++ b/style/style.css
@@ -158,7 +158,33 @@ section .add-new-header::after {
   padding: 15px;
 }
 
-.projects div {
+.projects .project-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.projects .project-info p {
+  color: lightgray;
+  font-family: 'Marcellus', serif;
+  letter-spacing: 1px;
+  padding: 15px;
+}
+
+.projects .project-todos {
+  background-color: #353535;
+  padding: 20px;
+  margin: 10px;
+}
+
+.projects .project-note {
+  color: lightgray;
   background-color: #353535;
   padding: 20px;
   margin: 10px;
