--- a/style/style.css
+++ b/style/style.css
@@ -2,20 +2,14 @@
 *,
 html,
 body {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
 
 body {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   min-height: 100vh;
 }
 
@@ -37,176 +31,126 @@ header {
 }
 
 section {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  flex-grow: 1;
   background-color: #1d1d1d;
   overflow-y: hidden;
   overflow-x: hidden;
 }
-
 section aside {
   width: 250px;
   background-color: #2e2e2e;
 }
-
 section main {
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  flex-grow: 1;
 }
-
 section .add-new-header {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-direction: column;
+  justify-content: center;
   padding-top: 20px;
   gap: 20px;
   margin: auto;
   height: 150px;
   width: 60%;
 }
-
 section .add-new-header h1 {
-  color: lightgray;
+  color: rgb(211, 211, 211);
   font-size: 25px;
-  font-family: 'Marcellus', serif;
+  font-family: "Marcellus", serif;
   letter-spacing: 1px;
 }
-
 section .add-new-header div {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   text-align: left;
   gap: 20px;
 }
-
 section .add-new-header button {
   font-size: 25px;
-  color: lightgray;
+  color: rgb(211, 211, 211);
   padding: 7px 15px;
-  background-color: #a055d3;
+  background-color: rgb(160, 85, 211);
   border: none;
   border-radius: 50px;
-  -webkit-transition: 0.3s;
   transition: 0.3s;
   cursor: pointer;
 }
-
 section .add-new-header button:hover {
-  -webkit-box-shadow: #a055d3 1px 0 10px;
-          box-shadow: #a055d3 1px 0 10px;
+  box-shadow: rgb(160, 85, 211) 1px 0 10px;
 }
-
 section .add-new-header p {
-  color: lightgray;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  font-family: 'Marcellus', serif;
+  color: rgb(211, 211, 211);
+  align-items: center;
+  font-family: "Marcellus", serif;
   letter-spacing: 1px;
   font-weight: bold;
 }
-
 section .add-new-header::after {
-  content: '';
+  content: "";
   height: 1px;
   width: 100%;
-  background-color: #8d8d8d;
+  background-color: rgb(141, 141, 141);
 }
 
 .projects {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  flex-direction: column;
+  justify-content: flex-start;
   margin: 20px auto;
   height: auto;
   width: 60%;
   background-color: #2e2e2e;
   border-radius: 5px;
-  -webkit-box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-          box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
   margin-bottom: 20px;
 }
-
 .projects h1 {
-  color: lightgray;
+  color: rgb(211, 211, 211);
   font-size: 25px;
-  font-family: 'Marcellus', serif;
+  font-family: "Marcellus", serif;
   letter-spacing: 1px;
   padding: 15px;
 }
-
+.projects .description {
+  color: rgb(211, 211, 211);
+  font-family: "Marcellus", serif;
+  letter-spacing: 1px;
+  padding-left: 15px;
+}
 .projects .project-info {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
 }
-
 .projects .project-info p {
-  color: lightgray;
-  font-family: 'Marcellus', serif;
+  color: rgb(211, 211, 211);
+  font-family: "Marcellus", serif;
   letter-spacing: 1px;
   padding: 15px;
 }
-
 .projects .project-todos {
   background-color: #353535;
   padding: 20px;
   margin: 10px;
 }
-
 .projects .project-note {
-  color: lightgray;
+  color: rgb(211, 211, 211);
   background-color: #353535;
   padding: 20px;
   margin: 10px;
 }
-
 .projects li {
-  color: lightgray;
-  font-family: 'Marcellus', serif;
+  color: rgb(211, 211, 211);
+  font-family: "Marcellus", serif;
   letter-spacing: 1px;
   list-style: none;
 }
 
 .modal {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   height: 100%;
   width: 100%;
   position: absolute;
@@ -214,14 +158,12 @@ section .add-new-header::after {
   -webkit-backdrop-filter: blur(10px);
           backdrop-filter: blur(10px);
 }
-
 .modal .form-container {
   height: auto;
   width: 600px;
   background-color: #2e2e2e;
   border-radius: 5px;
 }
-
 .modal .form-container .exit-modal {
   color: white;
   font-size: 30px;
@@ -230,27 +172,19 @@ section .add-new-header::after {
   padding: 0 10px;
   cursor: pointer;
 }
-
 .modal .form-container form {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   gap: 10px;
   width: 100%;
   border-radius: 0 0 5px 5px;
   padding: 0 30px 30px;
 }
-
 .modal .form-container label {
-  color: lightgray;
-  font-family: 'Marcellus', serif;
+  color: rgb(211, 211, 211);
+  font-family: "Marcellus", serif;
   letter-spacing: 1px;
 }
-
 .modal .form-container input {
   width: 200px;
   border: none;
@@ -258,26 +192,21 @@ section .add-new-header::after {
   border-radius: 5px;
   padding-left: 10px;
 }
-
-.modal .form-container input[type="date"] {
+.modal .form-container input[type=date] {
   cursor: pointer;
 }
-
 .modal .form-container .task-btn {
   width: 200px;
 }
-
 .modal .form-container textarea {
   height: 130px;
   padding: 10px 10px;
 }
-
 .modal .form-container button {
   color: white;
   padding: 10px;
-  background-color: #a055d3;
+  background-color: rgb(160, 85, 211);
   border: none;
-  -webkit-transition: 0.3s;
   transition: 0.3s;
   cursor: pointer;
 }
@@ -287,22 +216,17 @@ section .add-new-header::after {
 }
 
 .task-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 10px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
-
 .task-container button {
   border-radius: 5px;
 }
 
 .task-list {
-  color: lightgray;
-  font-family: 'Marcellus', serif;
+  color: rgb(211, 211, 211);
+  font-family: "Marcellus", serif;
   letter-spacing: 1px;
   list-style: none;
   margin-left: 10px;
@@ -312,5 +236,4 @@ section .add-new-header::after {
 .checkbox {
   width: 300px;
   padding: 5px;
-}
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
