--- a/style/_javascript.scss
+++ b/style/_javascript.scss
@@ -11,6 +11,7 @@
   border-radius: 5px;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
   margin-bottom: 20px;
+  cursor: pointer;
 
   h1 {
     color: rgb(211, 211, 211);
@@ -162,3 +163,11 @@
   padding: 5px;
 }
 
+.unhidden {
+  height: auto;
+  overflow: visible;
+}
+
+.closed {
+  display: none;
+}
