--- a/style/_javascript.scss
+++ b/style/_javascript.scss
@@ -11,7 +11,6 @@
   border-radius: 5px;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
   margin-bottom: 20px;
-  cursor: pointer;
 
   h1 {
     color: rgb(211, 211, 211);
@@ -32,6 +31,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    cursor: pointer;
 
     p {
       color: rgb(211, 211, 211);
@@ -55,10 +55,11 @@
   }
 
   li {
-    color: rgb(211, 211, 211);
+    color: #ad7cce;
     font-family: 'Marcellus', serif;
     letter-spacing: 1px;
     list-style: none;
+    cursor: pointer;
   }
 }
 
@@ -170,4 +171,41 @@
 
 .closed {
   display: none;
+}
+
+.note-text {
+  height: 300px;
+  width: 100%;
+  color: white;
+  border: none;
+  background-color: #2e2e2e;
+  padding: 10px;
+}
+
+.edit {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.edit-input {
+  height: 30px;
+  color: rgb(211, 211, 211);
+  padding-left: 10px;
+  margin-left: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #353535;
+}
+
+.edit-btn {
+  font-size: 20px;
+  font-weight: bold;
+  padding: 10px 20px;
+  margin-left: 10px;
+  border: none;
+  border-radius: 5px;
+  color: rgb(211, 211, 211);
+  background-color:rgb(160, 85, 211);
+  cursor: pointer;
 }
