--- a/style/style.css
+++ b/style/style.css
@@ -2,14 +2,20 @@
 *,
 html,
 body {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
 
 body {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   min-height: 100vh;
 }
 
@@ -31,127 +37,185 @@ header {
 }
 
 section {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-grow: 1;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   background-color: #1d1d1d;
   overflow-y: hidden;
   overflow-x: hidden;
 }
+
 section aside {
   width: 250px;
   background-color: #2e2e2e;
 }
+
 section main {
-  flex-grow: 1;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
+
 section .add-new-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   padding-top: 20px;
   gap: 20px;
   margin: auto;
   height: 150px;
   width: 60%;
 }
+
 section .add-new-header::after {
-  content: "";
+  content: '';
   height: 1px;
   width: 100%;
-  background-color: rgb(141, 141, 141);
+  background-color: #8d8d8d;
 }
+
 section .add-new-header h1 {
-  color: rgb(211, 211, 211);
+  color: lightgray;
   font-size: 25px;
-  font-family: "Marcellus", serif;
+  font-family: 'Marcellus', serif;
   letter-spacing: 1px;
 }
+
 section .add-new-header div {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-align: left;
   gap: 20px;
 }
+
 section .add-new-header button {
   font-size: 25px;
-  color: rgb(211, 211, 211);
+  color: lightgray;
   padding: 7px 15px;
-  background-color: rgb(160, 85, 211);
+  background-color: #a055d3;
   border: none;
   border-radius: 50px;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
   cursor: pointer;
 }
+
 section .add-new-header button:hover {
-  box-shadow: rgb(160, 85, 211) 1px 0 10px;
+  -webkit-box-shadow: #a055d3 1px 0 10px;
+          box-shadow: #a055d3 1px 0 10px;
 }
+
 section .add-new-header p {
-  color: rgb(211, 211, 211);
-  align-items: center;
-  font-family: "Marcellus", serif;
+  color: lightgray;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-family: 'Marcellus', serif;
   letter-spacing: 1px;
   font-weight: bold;
 }
 
 .projects {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   margin: 20px auto;
   height: auto;
   width: 60%;
   background-color: #2e2e2e;
   border-radius: 5px;
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
   margin-bottom: 20px;
-  cursor: pointer;
 }
+
 .projects h1 {
-  color: rgb(211, 211, 211);
+  color: lightgray;
   font-size: 25px;
-  font-family: "Marcellus", serif;
+  font-family: 'Marcellus', serif;
   letter-spacing: 1px;
   padding: 15px;
 }
+
 .projects .description {
-  color: rgb(211, 211, 211);
-  font-family: "Marcellus", serif;
+  color: lightgray;
+  font-family: 'Marcellus', serif;
   letter-spacing: 1px;
   padding-left: 15px;
 }
+
 .projects .project-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
 }
+
 .projects .project-info p {
-  color: rgb(211, 211, 211);
-  font-family: "Marcellus", serif;
+  color: lightgray;
+  font-family: 'Marcellus', serif;
   letter-spacing: 1px;
   padding: 15px;
 }
+
 .projects .project-todos {
   background-color: #353535;
   padding: 20px;
   margin: 10px;
 }
+
 .projects .project-note {
-  color: rgb(211, 211, 211);
+  color: lightgray;
   background-color: #353535;
   padding: 20px;
   margin: 10px;
 }
+
 .projects li {
-  color: rgb(211, 211, 211);
-  font-family: "Marcellus", serif;
+  color: #ad7cce;
+  font-family: 'Marcellus', serif;
   letter-spacing: 1px;
   list-style: none;
+  cursor: pointer;
 }
 
 .modal {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 100%;
   width: 100%;
   position: absolute;
@@ -159,12 +223,14 @@ section .add-new-header p {
   -webkit-backdrop-filter: blur(10px);
           backdrop-filter: blur(10px);
 }
+
 .modal .form-container {
   height: auto;
   width: 600px;
   background-color: #2e2e2e;
   border-radius: 5px;
 }
+
 .modal .form-container .exit-modal {
   color: white;
   font-size: 30px;
@@ -173,19 +239,27 @@ section .add-new-header p {
   padding: 0 10px;
   cursor: pointer;
 }
+
 .modal .form-container form {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   gap: 10px;
   width: 100%;
   border-radius: 0 0 5px 5px;
   padding: 0 30px 30px;
 }
+
 .modal .form-container label {
-  color: rgb(211, 211, 211);
-  font-family: "Marcellus", serif;
+  color: lightgray;
+  font-family: 'Marcellus', serif;
   letter-spacing: 1px;
 }
+
 .modal .form-container input {
   width: 200px;
   border: none;
@@ -193,21 +267,26 @@ section .add-new-header p {
   border-radius: 5px;
   padding-left: 10px;
 }
-.modal .form-container input[type=date] {
+
+.modal .form-container input[type="date"] {
   cursor: pointer;
 }
+
 .modal .form-container .task-btn {
   width: 200px;
 }
+
 .modal .form-container textarea {
   height: 130px;
   padding: 10px 10px;
 }
+
 .modal .form-container button {
   color: white;
   padding: 10px;
-  background-color: rgb(160, 85, 211);
+  background-color: #a055d3;
   border: none;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
   cursor: pointer;
 }
@@ -217,17 +296,22 @@ section .add-new-header p {
 }
 
 .task-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   gap: 10px;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
+
 .task-container button {
   border-radius: 5px;
 }
 
 .task-list {
-  color: rgb(211, 211, 211);
-  font-family: "Marcellus", serif;
+  color: lightgray;
+  font-family: 'Marcellus', serif;
   letter-spacing: 1px;
   list-style: none;
   margin-left: 10px;
@@ -246,4 +330,48 @@ section .add-new-header p {
 
 .closed {
   display: none;
-}/*# sourceMappingURL=style.css.map */
+}
+
+.note-text {
+  height: 300px;
+  width: 100%;
+  color: white;
+  border: none;
+  background-color: #2e2e2e;
+  padding: 10px;
+}
+
+.edit {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.edit-input {
+  height: 30px;
+  color: lightgray;
+  padding-left: 10px;
+  margin-left: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #353535;
+}
+
+.edit-btn {
+  font-size: 20px;
+  font-weight: bold;
+  padding: 10px 20px;
+  margin-left: 10px;
+  border: none;
+  border-radius: 5px;
+  color: lightgray;
+  background-color: #a055d3;
+  cursor: pointer;
+}
+/*# sourceMappingURL=style.css.map */
