Added items to local storage allowing them to show up on refresh

--- a/style/_javascript.scss
+++ b/style/_javascript.scss
@@ -55,7 +55,7 @@
   }
 
   li {
-    color: #ad7cce;
+    color: rgb(211, 211, 211);
     font-family: 'Marcellus', serif;
     letter-spacing: 1px;
     list-style: none;
