--- a/style/style.css
+++ b/style/style.css
@@ -199,7 +199,7 @@ section .add-new-header p {
 }
 
 .projects li {
-  color: #ad7cce;
+  color: lightgray;
   font-family: 'Marcellus', serif;
   letter-spacing: 1px;
   list-style: none;
